--- a/platformio.ini
+++ b/platformio.ini
@@ -17,5 +17,5 @@ monitor_speed = 115200
 
 lib_deps =
     https://github.com/spluttflob/Arduino-PrintStream.git
-    https://github.com/adafruit/Adafruit_LSM6DS.git     ; Accel + Gyro
-    https://github.com/adafruit/Adafruit_LIS3MDL.git    ; Magnetometer
+    ;https://github.com/adafruit/Adafruit_LSM6DS.git     ; Accel + Gyro
+    ;https://github.com/adafruit/Adafruit_LIS3MDL.git    ; Magnetometer
