--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev]
+[env:featheresp32]
 platform = espressif32
-board = esp32dev
+board = featheresp32
 framework = arduino
 
 monitor_speed = 115200
@@ -19,6 +19,4 @@ lib_deps =
     https://github.com/spluttflob/Arduino-PrintStream.git
     https://github.com/spluttflob/ME507-Support.git 
     https://github.com/adafruit/Adafruit_LSM6DS.git    
-     
-    ;https://github.com/adafruit/Adafruit_LSM6DS.git     ; Accel + Gyro
     https://github.com/adafruit/Adafruit_LIS3MDL.git    ; Magnetometer
